set user info form font size to 16 to avoid zooming on ios. scroll to the top of the form on save and edit

--- a/public/css/register/main.css
+++ b/public/css/register/main.css
@@ -18,6 +18,9 @@ body {
   .form-container {
     bottom: 0;
   }
+  .form-container .input {
+    font-size: 16px;
+  }
   .img-container img {
     min-width: 100%;
   }
